--- a/public/css/gaya.css
+++ b/public/css/gaya.css
@@ -668,7 +668,7 @@ body {
 
 .seller-card .card-banner {
   position: relative;
-  background-color: #400303;
+  background-color: #ffffff;
 }
 
 .seller-card .card-banner img { border-radius: inherit; }
