--- a/public/css/gaya.css
+++ b/public/css/gaya.css
@@ -664,7 +664,7 @@ body {
   align-items: center;
   gap: 12px;
   padding: 12px;
-  background-color: #ffffff;
+  background-color: #410D02;
 }
 
 .seller-card .card-banner {
